@@ -708,6 +708,7 @@ ASN1_OBJECT *	OBJ_nid2obj(int n);
 char *		OBJ_nid2ln(int n);
 char *		OBJ_nid2sn(int n);
 int		OBJ_obj2nid(ASN1_OBJECT *o);
+ASN1_OBJECT *	OBJ_txt2obj(char *s, int no_name);
 int		OBJ_txt2nid(char *s);
 int		OBJ_ln2nid(char *s);
 int		OBJ_sn2nid(char *s);
@@ -736,6 +737,7 @@ ASN1_OBJECT *	OBJ_nid2obj();
 char *		OBJ_nid2ln();
 char *		OBJ_nid2sn();
 int		OBJ_obj2nid();
+ASN1_OBJECT *	OBJ_txt2obj();
 int		OBJ_txt2nid();
 int		OBJ_ln2nid();
 int		OBJ_sn2nid();
